# faster_polyforms

./: .gitignore  Cargo.toml  LICENSE  README.md  array.sh  dataset.sh  index.html  index.js  pipeline.yml  test.slurm  webpack.config.js
scripts/: README.md  analysis.sh  bernoulli.sh  dataset.sh  summary.js
src/: .lib.rs.swp  lib.rs  main.rs
